# simpleNOTE-api

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  datastore.go  firestore.go  go.mod  go.sum  gqlgen.yml  graphql_gen.go  graphql_model_gen.go  graphql_resolver.go  main.go  middleware.go  schema.graphqls
.github/workflows/: cargo.yaml  test.yaml
migrations/2021-06-03-165429_create_model/: down.sql  up.sql
src/: filters.rs  main.rs
src/graphql/: context.rs  mod.rs  model.rs  mutation.rs  query.rs
src/repository/: account.rs  mod.rs  model.rs  schema.rs  token.rs
