[package]
name = "simple_note_api"
version = "0.1.0"
authors = ["Tom Streller <tom@streller.me>"]
edition = "2018"

[dependencies]
bcrypt = "0.8"
dotenv = "0.15"
enclose = "1.1"
env_logger = "0.8"
lazy_static = "1.4"
log = "0.4"
r2d2 = "0.8"
rand = "0.7"
jsonwebtoken = "7.2"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["v4", "serde"] }

warp = { version = "0.2", features = ["compression"] }

tokio = { version = "0.2", features = ["full"] }

futures = { version = "0.3", default-features = false }

diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2", "uuidv07"] }
diesel_migrations = { version = "1.4", features = ["postgres"] }
diesel-derive-enum = { version = "1.1", features = ["postgres"] }

prometheus = { version = "0.9", features = ["process"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

juniper = "0.15"
juniper_warp = "0.6"
